# OI.AI.MLEng.TakeHome

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
app/: main.py  metrics.py
app/api/v1/routes/: img_class.py
app/config/: delete_fluent.py  delete_otel.py  logger.py  middleware.py
app/models/: multimodel.py  resnet.py  tritonservice.py
app/services/loki/: loki-local-config.yaml
app/services/prometheus/: prometheus.yml
docker/: demo-maestro.Dockerfile  docker-compose.yml  fluent-bit.Dockerfile  grafana.Dockerfile  loki.Dockerfile  maestro-compose.yml  maestro.Dockerfile  marine.Dockerfile  otel.Dockerfile  prometheus.Dockerfile  triton.Dockerfile
k8s/: fluent-bit-configmap.yaml  fluent-bit-deployment.yaml  grafana-datasources-configmap.yaml  grafana-deployment.yaml  grafana-pvc.yaml  hpa.yaml  jaeger-deployment.yaml  loki-configmap.yaml  loki-deployment.yaml  marine-classifier-deployment.yaml  namespace.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  services.yaml  triton-deployment.yaml
project_config/: .pre-commit-config.yaml
research/: pyproject.toml
scripts/: build.sh  compress_large_files.sh  demo.sh  get_test_images.sh  k8s-manifests.sh  prepare_triton_models.sh  rise.sh  run.sh  setup-infra.sh  setup_project.sh  stop_and_clean.sh  sweetdreams.sh  test_cpu_load_balancing.sh  test_locust.sh  test_locust_k8s.sh  test_resnet50_api.sh  test_triton_api.sh  win_test_endpoints.ps1
services/fluent-bit/: fluent-bit.conf  parsers.conf  predications_lua.lua
services/grafana/: Marine Classifier Dashboard.json
services/grafana/provisioning/dashboards/: Marine Classifier Dashboard.json
services/otel/: otel-collector-config.yml
services/prometheus/: prometheus.yml
tests/: analyze_locust_logs.py  async_locust_scale_test.py  async_locust_scale_test_k8s.py  async_scale_test.py  test_img_class.py
tests/locust_reports/: scale_u30_ramp10_3m.html
tests/reports/: pytest-report.xml
