[project]
name = "reasearch"
version = "0.0.1"
description = "enviroment for reasearching models and data for the main service"
authors = [
    {name = "Gabriel Dev Container",email = "gabrielpizzighini@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
